--- a/style.css
+++ b/style.css
@@ -1,285 +1,350 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Rye&display=swap');
+:root {
+  --font-general: "Poppins", sans-serif;
+  --font-details: "Source Sans 3", sans-serif;
+}
 
-/* Configurações gerais */
 * {
-    font-family: "Poppins";
-    letter-spacing: -1px;
-}
-
-button {
-    cursor: pointer;
-}
-
-li {
-    list-style: none;
+  font-family: var(--font-general);
+  letter-spacing: -1px;
+  font-weight: 300;
 }
 
 body {
-    background-color: #2e2e2e;
-    margin-left: 4rem;
-    margin-top: 4rem;
+  margin: 0;
+  padding: 0;
+  background-color: #ebebeb;
+  min-height: 100vh;
 }
 
-#display {
-    display: flex;
-}
-/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
-
-
-
-/* Primeira área - Tracker de gastos */
-.table {
-    height: 11rem;
-    width: 24rem;
-    background: #da9dff;
-    padding: 2rem;
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 5%;
+  align-items: center;
 }
 
-.table h1 {
-    margin-top: 1rem;
-    font-weight: bolder;
-    font-size: 2rem;
-    margin-left: 1rem;
+nav img {
+  width: 8em;
+  margin-top: 1em;
+  cursor: pointer;
+  border-radius: 8px;
 }
 
-.table p {
-    margin-left: 2rem;
-    margin-top: -1rem;
+nav ul {
+  display: flex;
+  gap: 4em;
+  background-color: #fff;
+  align-items: center;
+  list-style-type: none;
+  padding-left: 2em;
+  padding-right: 1em;
+  height: fit-content;
+  border-radius: 5px;
 }
 
-.saldo-dinamico-verde {
-    color: rgb(57, 124, 55);
+nav li a {
+  color: #000;
+  text-decoration: none;
 }
 
-.saldo-dinamico-vermelho {
-    color: rgb(199, 40, 40);
-}
-/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
-
-
-
-/* Segunda área - Inserção de dados */
-.display-inserir-dados {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1rem;
-    height: 12rem;
-    width: 14rem;
-    background: #da9dff;
-    margin-top: -15rem;
-    padding: 2rem;
+nav ul li a:hover {
+  transition: ease-in-out 0.3s;
+  text-decoration: underline;
 }
 
-.btn-adicionar {
-    color: rgb(85, 44, 44);
-    border: none;
-    width: 7rem;
+nav button {
+  border: none;
+  background-color: #000;
+  border-radius: 5px;
+  color: #fff;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100px;
+  cursor: pointer;
 }
 
-input {
-    color: black;
-    width: 8rem;
-    padding: 0.5rem;
-    border: none;
-    margin-top: 0.3px;
-    
+nav button:hover {
+  border: 1px solid #000;
+  background-color: #636363;
+  color: #000;
+  transition: ease-in-out 180ms;
 }
 
-select {
-    color: rgb(99, 90, 90);
-    width: 9rem;
-    padding: 0.4rem;
-    margin-top: 1px;
-    border: none;
-
+nav button a {
+  color: white;
 }
 
-.btn-adicionar {
-    color: white;
-    background-color: #281c2f;
-    width: 9rem;
-    padding: 6px;
-    margin-top: 5px;
+.container-main {
+  display: flex;
+  margin: 0 5%;
+  margin-top: 2vh;
+  margin-bottom: 10vh;
+  gap: 2em;
 }
 
-.btn-adicionar:hover {
-    background-color: rgb(103, 179, 103);
-    color: black;
-    transition: 0.6s ease;
+.container-left {
+  display: flex;
+  flex-direction: column;
+  padding: 0 3em 3em 3em;
+  background-color: #fff;
+  border-radius: 8px;
+  text-align: center;
+  flex: 1;
 }
 
-
-/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
-
-
-
-/* Terceira área - Display do Mês  */
-.vitrine {
-    overflow-y: auto;
-    height: 380px;
-    width: 80%;
-    scrollbar-width: thin;
-    scrollbar-color: #888 #f1f1f1;
+.content-left {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
 }
 
-.vitrine::-webkit-scrollbar {
-    width: 2px; 
-  }
-
-.vitrine::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-
-.div-icones {
-    margin-right: 0.8rem;
-    display: flex;
-    align-items: center;
-    
+.container-left h1,
+.container-left p {
+  font-family: var(--font-details);
+  margin: 0;
+  font-weight: 400;
+  font-size: 31px;
 }
 
-.botao-excluir {
-    background-color: #9747ff;
-    color: white;
-    border: none;
-    padding: 0px 6px;
-    cursor: pointer;
-    margin-right: 1rem;
+.container-left p {
+  font-weight: lighter;
+  color: #a1a1a1;
+  font-size: 22px;
 }
 
-.arrow {
-    width: 0;
-    height: 0;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    transform: rotate(90deg);
-    margin-right: 10px;
+.cl-texto {
+  margin-top: 8vh;
 }
 
-.infos2 {
-    margin-top: -0.2rem;
+.saldo-dinamico {
+  font-style: italic;
+  color: #000;
+  font-size: 24px;
+}
+
+.inserir-dados {
+  background-color: #eee;
+  padding: 3em 4em;
+  border-radius: 8px;
+}
+
+.inserir-dados form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.inserir-dados form input {
+  text-align: center;
+  padding: 0.5em;
+}
+
+.inserir-dados form option {
+  text-align: center;
+  font-family: inherit;
+  padding: 0.5em;
+}
+
+.inserir-dados button {
+  background-color: #000;
+  border: none;
+  padding: 0.5em;
+  color: #fff;
+  cursor: pointer;
+}
+
+.inserir-dados button:hover {
+  color: #000;
+  background-color: #fff;
+  transition: ease-in-out 180ms;
+}
+
+.container-right {
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 8px;
+  text-align: center;
+  flex-grow: 1;
+  flex: 3;
+  padding: 2em;
+  overflow-y: scroll;
+}
+
+.cr-bars {
+  display: flex;
+  width: 100%;
+  gap: 1em;
+  margin-bottom: 0;
+}
+
+.cr-bars hr {
+  flex: 1;
+  border: 1px solid #000;
 }
 
 .area-display-mensal {
-    height: 32rem;
-    width: 70rem;
-    background: #FBF7FF;
-    margin-left: 2rem;
+  text-align: center;
 }
 
-.display-mes {
-    font-size: 2.5rem;
-    margin-left: 4rem;
-    margin-top: 3rem;
-    margin-bottom: 1.5rem;
-    font-weight: bolder;
+.area-display-mensal p {
+  font-size: 32px;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 2vh;
+  margin-bottom: 1vh;
 }
 
-.btn-alterar-mes    {
-    position: absolute;
-    width: 3rem;
-    margin-left: 58rem;
-    margin-top: -4.5rem;
-    background-color: #9747ff;
-    color: white;
-    border-color: #9747ff;
-    font-size: 1.5rem;
+.btn-voltar-mes,
+.btn-alterar-mes {
+  background-color: #ebebeb;
+  border: none;
+  padding: 1em;
+  text-align: center;
+  cursor: pointer;
 }
 
-.btn-voltar-mes {
-    position: absolute;
-    width: 3rem;
-    margin-left: 54rem;
-    margin-top: -4.5rem;
-    background-color: #9747ff;
-    color: white;
-    border-color: #9747ff;
-    font-size: 1.5rem;
+.btn-alterar-mes:hover,
+.btn-voltar-mes:hover {
+  background-color: #000;
+  color: #fff;
+  transition: ease-in-out 180ms;
 }
 
-.gasto-detalhado-entrada {
-    display: flex;
-    align-items: center;
-    width: 82%;
-    color: rgb(23, 143, 23);
-    margin-left: 5rem;
-    font-size: 1.2rem;
-    padding: 5px;
-    justify-content: space-between;
-}   
+.vitrine {
+  margin-top: 2em;
+  text-align: center;
+}
 
+.gasto-detalhado {
+  word-break: break-all;
+  text-align: left;
+}
+
+.gasto-detalhado li {
+  list-style: none;
+  font-size: 18px;
+}
+
+.gasto-detalhado-entrada,
 .gasto-detalhado-saida {
-    display: flex;
-    align-items: center;
-    width: 82%;
-    color: rgb(240, 74, 74);
-    margin-left: 5rem;
-    font-size: 1.2rem;
-    margin-bottom: 4px;
-    padding: 5px;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  gap: 1em;
 }
 
-.gasto-detalhado-entrada:hover, .gasto-detalhado-saida:hover {
-    text-decoration: underline;
-    text-underline-offset: 0.5rem;
-    text-decoration-color: rgb(156, 144, 144);
+.div-icones {
+  display: flex;
+  align-items: center;
 }
 
-.divEmpty {
-    display: flex;
-    flex-direction: column;
-    margin: 5px 0 0 95px;   
-    font-size: 1.2rem;
+.arrow {
+  width: 0;
+  height: 0;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  transform: rotate(90deg);
+  margin-right: 5px;
 }
 
-.contentEmpty {
-    color: #343a40;
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 34px;
-    margin-bottom: 20px;
-}
-  
-/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
-
-
-/* Quarta área - Gráficos  */
-.area-display-graficos {
-    height: 16rem;
-    width: 66rem;
-    background: #FBF7FF;
-    margin-left: 30rem;
-    margin-top: 0.6rem;
-    padding: 2rem;
+.botao-excluir {
+  border: none;
+  color: #fff;
+  background-color: #000;
+  cursor: pointer;
 }
 
-#grafico-dinamico {
-    margin-left: 15rem;
+footer {
+  background-color: #fff;
+  padding: 1em 5%;
+  border-top: 1px solid #ebebeb;
+  font-family: var(--font-details);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.btn-alterar-grafico {
-    position: absolute;
-    width: 3rem;
-    background-color: #9747ff;
-    color: white;
-    border-color: #9747ff;
-    font-size: 1.5rem;
-    margin-left: 56.8rem;
+footer a {
+  text-decoration: none;
+  color: black;
 }
 
-.btn-voltar-grafico {
-    position: absolute;
-    width: 3rem;
-    background-color: #9747ff;
-    color: white;
-    border-color: #9747ff;
-    font-size: 1.5rem;
-    margin-left: 52.8rem;
+footer a:hover {
+  text-decoration: underline;
 }
 
-#graficos h1 {
-    position: absolute;
-    margin-left: 2rem;
-    margin-top: -0.8;
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
 
+.footer-left {
+  font-size: 14px;
+  color: #666;
+}
+
+.footer-right ul {
+  display: flex;
+  gap: 2em;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-right ul li a {
+  color: #000;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.footer-right ul li a:hover {
+  text-decoration: underline;
+  transition: ease-in-out 0.3s;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: white;
+  margin: 15% auto;
+  padding: 40px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+}
+
+#how-to-use-modal .modal-content {
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-top: 8%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
