--- a/style.css
+++ b/style.css
@@ -348,3 +348,126 @@ footer a:hover {
   text-decoration: none;
   cursor: pointer;
 }
+
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+  }
+
+  nav img {
+    width: 8em;
+  }
+
+  nav ul {
+    flex-direction: row;
+    width: 98%;
+    justify-content: space-around;
+  }
+
+  nav button {
+    width: auto;
+  }
+
+  .container-main {
+    flex-direction: column;
+    margin: 0 2%;
+  }
+
+  .container-left,
+  .container-right {
+    align-self: center;
+    flex: none;
+    width: 80%;
+    padding: 1em;
+  }
+
+  .container-left {
+    margin-bottom: 1em;
+    margin-top: 1em;
+  }
+
+  .content-left {
+    gap: 1em;
+  }
+
+  .content-left h1 {
+    margin-top: -1.5em;
+  }
+
+  .container-right {
+    overflow: visible;
+    margin-bottom: 10vh;
+    min-height: 70vh;
+  }
+
+  .btn-voltar-mes,
+  .btn-alterar-mes {
+    font-size: 16px;
+  }
+
+  .gasto-detalhado {
+    font-size: 16px;
+  }
+
+  .gasto-detalhado-entrada,
+  .gasto-detalhado-saida {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .gasto-detalhado-entrada button,
+  .gasto-detalhado-saida button {
+    width: 40%;
+  }
+
+  .vitrine {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: -2em;
+    gap: 2em;
+  }
+
+  .div-icones {
+    flex-direction: column;
+  }
+
+  .arrow {
+    transform: rotate(180deg);
+    margin-bottom: 0.5em;
+  }
+
+  footer {
+    text-align: center;
+  }
+
+  .footer-container {
+    flex-direction: column-reverse;
+    gap: 1em;
+  }
+
+  .footer-left {
+    margin-bottom: 1em;
+  }
+
+  .footer-right {
+    margin-top: 1em;
+  }
+
+  .footer-right ul {
+    flex-direction: column;
+    gap: 0.5em;
+  }
+
+  .footer-right ul li a {
+    font-size: 12px;
+  }
+
+  .modal-content {
+    width: 80%;
+    margin: 35% auto;
+    padding: 25px;
+  }
+}
